# rust-postgres

./: .gitignore  .gitmodules  Cargo.toml  Cross.release.toml  Cross.toml  README.md  docker-compose.yml  rustfmt.toml
.github/: dependabot.yml
.github/cross/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu
.github/workflows/: ci.yml  release-build.yml
codegen/: Cargo.toml
codegen/src/: type_gen.rs
crates/opengauss/: CHANGELOG.md  Cargo.toml
crates/opengauss-derive/: CHANGELOG.md  Cargo.toml
crates/opengauss-derive/src/: lib.rs
crates/opengauss-native-tls/: CHANGELOG.md  Cargo.toml
crates/opengauss-native-tls/src/: lib.rs  test.rs
crates/opengauss-openssl/: CHANGELOG.md  Cargo.toml
crates/opengauss-openssl/src/: lib.rs  test.rs
crates/opengauss-protocol/: Cargo.toml
crates/opengauss-protocol/src/: lib.rs
crates/opengauss-protocol/src/authentication/: sha256.rs
crates/opengauss-protocol/src/message/: backend.rs
crates/opengauss-types/: Cargo.toml
crates/opengauss-types/src/: bit_vec_06.rs  eui48_1.rs  geo_types_06.rs  jiff_01.rs  special.rs
crates/opengauss/src/: binary_copy.rs  cancel_token.rs  connection.rs  copy_in_writer.rs  copy_out_reader.rs  lib.rs
crates/tokio-opengauss/: CHANGELOG.md  Cargo.toml
crates/tokio-opengauss/benches/: bench.rs
crates/tokio-opengauss/src/: cancel_query_raw.rs  cancel_token.rs  client.rs  connect_tls.rs  copy_in.rs  copy_out.rs  generic_client.rs  lib.rs  query.rs  row.rs  simple_query.rs  statement.rs
crates/tokio-opengauss/tests/test/: main.rs  parse.rs
docker/: sql_setup.sh
docs/plans/: 2026-04-25-sha256-auth.md
opengauss/: Cargo.toml
opengauss-derive-test/: Cargo.toml
opengauss-derive-test/src/: composites.rs  lib.rs  transparent.rs
opengauss-derive-test/src/compile-fail/: invalid-types.rs
opengauss-derive/src/: accepts.rs  composites.rs  enums.rs  fromsql.rs  overrides.rs  tosql.rs
opengauss-native-tls/: Cargo.toml
opengauss-native-tls/src/: test.rs
opengauss-openssl/: Cargo.toml
opengauss-openssl/src/: test.rs
opengauss-protocol/: CHANGELOG.md  Cargo.toml
opengauss-protocol/src/authentication/: mod.rs  sha256.rs
opengauss-protocol/src/message/: backend.rs  frontend.rs
opengauss-protocol/src/password/: mod.rs
opengauss-types/: CHANGELOG.md  Cargo.toml
opengauss-types/src/: bit_vec_07.rs  bit_vec_08.rs  bit_vec_09.rs  chrono_04.rs  cidr_02.rs  cidr_03.rs  eui48_04.rs  geo_types_07.rs  jiff_02.rs  lib.rs  pg_lsn.rs  time_02.rs  time_03.rs  uuid_08.rs  uuid_1.rs
opengauss/benches/: bench.rs
opengauss/src/: client.rs  config.rs  lazy_pin.rs  row_iter.rs  test.rs  transaction.rs  transaction_builder.rs
postgres/: CHANGELOG.md  Cargo.toml
postgres-derive/: CHANGELOG.md  Cargo.toml
postgres-derive-test/: Cargo.toml
postgres-derive-test/src/: composites.rs  domains.rs  enums.rs  lib.rs  records.rs
postgres-derive/src/: accepts.rs  composites.rs  fromsql.rs  overrides.rs  tosql.rs
postgres-native-tls/: CHANGELOG.md  Cargo.toml
postgres-native-tls/src/: lib.rs  test.rs
postgres-openssl/: CHANGELOG.md  Cargo.toml
postgres-openssl/src/: lib.rs
postgres-protocol/: CHANGELOG.md  Cargo.toml
postgres-protocol/src/: hex.rs  lib.rs
postgres-protocol/src/authentication/: mod.rs  sasl.rs
postgres-protocol/src/message/: backend.rs  frontend.rs
postgres-protocol/src/password/: mod.rs
postgres-protocol/src/types/: debug_bytes.rs  mod.rs  numeric.rs  test.rs
postgres-types/: CHANGELOG.md  Cargo.toml  feature_docs.md
postgres-types/src/: bit_vec_09.rs  jiff_01.rs  jiff_02.rs  lib.rs  macaddr_1.rs  private.rs  serde_json_1.rs  time_02.rs  type_gen.rs
postgres/benches/: bench.rs
postgres/src/: binary_copy.rs  cancel_token.rs  client.rs  config.rs  connection.rs  copy_in_writer.rs  copy_out_reader.rs  generic_client.rs  lazy_pin.rs  lib.rs  notifications.rs  row_iter.rs  test.rs  transaction.rs  transaction_builder.rs
postgres/tests/: no_default.rs
test/: server.crt  server.der
tests/opengauss-derive-test/: Cargo.toml
tests/opengauss-derive-test/src/: domains.rs  enums.rs
tests/opengauss-derive-test/src/compile-fail/: invalid-allow-mismatch.rs  invalid-transparent.rs  unknown-override.rs
tokio-opengauss/: Cargo.toml
tokio-opengauss/src/: binary_copy.rs  bind.rs  cancel_query.rs  codec.rs  config.rs  connect_raw.rs  connection.rs  portal.rs  prepare.rs  types.rs
tokio-opengauss/src/error/: mod.rs
tokio-opengauss/tests/test/: binary_copy.rs  runtime.rs
tokio-opengauss/tests/test/types/: chrono_04.rs
tokio-postgres/: CHANGELOG.md  Cargo.toml
tokio-postgres-derive/: Cargo.toml
tokio-postgres-derive-test/: Cargo.toml
tokio-postgres-derive/src/: attrs.rs  case.rs  from_row.rs  lib.rs
tokio-postgres/benches/: bench.rs  bind_execute_many.rs
tokio-postgres/src/: binary_copy.rs  bind.rs  cancel_query.rs  cancel_query_raw.rs  cancel_token.rs  client.rs  codec.rs  config.rs  connect.rs  connect_raw.rs  connect_socket.rs  connect_tls.rs  connection.rs  copy_both.rs  copy_in.rs  copy_out.rs  generic_client.rs  keepalive.rs  lib.rs  maybe_tls_stream.rs  portal.rs  prepare.rs  query.rs  row.rs  simple_query.rs  statement.rs  tls.rs  to_statement.rs  transaction.rs  transaction_builder.rs
tokio-postgres/src/error/: mod.rs
tokio-postgres/tests/: from_row_derive.rs  no_default.rs
tokio-postgres/tests/derive/fail/: borrowed_query_as.rs  borrowed_query_as.stderr  invalid_rename_rule.rs  invalid_rename_rule.stderr  name_on_container.rs  name_on_container.stderr  non_string_name.rs  non_string_name.stderr  non_string_rename_all.rs  non_string_rename_all.stderr  rename_all_on_field.rs  rename_all_on_field.stderr  unknown_container_attr.rs  unknown_container_attr.stderr  unknown_field_attr.rs  unknown_field_attr.stderr  unnamed.rs  unnamed.stderr
tokio-postgres/tests/test/: bind_execute_many.rs  main.rs  parse.rs  runtime.rs
tools/codegen/: Cargo.toml
tools/codegen/src/: sqlstate.rs
tools/gaussdb-mcp/: Cargo.toml
tools/gaussdb-mcp/src/: main.rs  queries.rs  server.rs  tools.rs
(+15 files in other folders)
