[workspace]
members = [
    "crates/opengauss",
    "crates/opengauss-derive",
    "crates/opengauss-native-tls",
    "crates/opengauss-openssl",
    "crates/opengauss-protocol",
    "crates/opengauss-types",
    "crates/tokio-opengauss",
    "tests/opengauss-derive-test",
    "tools/codegen",
    "tools/gaussdb-mcp",
]
resolver = "2"

[profile.release]
debug = 2
