[package]
name = "tokio-postgres-derive"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
description = "Derive macros for tokio-postgres"
repository = "https://github.com/rust-postgres/rust-postgres"
rust-version = "1.85"

[lib]
proc-macro = true
test = false

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
