[package]
name = "opengauss-native-tls"
version = "0.5.3"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "TLS support for tokio-opengauss via native-tls"
repository = "https://github.com/c2j/rust-opengauss"
readme = "../../README.md"
rust-version = "1.85"

[features]
default = ["runtime"]
runtime = ["tokio-opengauss/runtime"]

[dependencies]
native-tls = { version = "0.2", features = ["alpn"] }
tokio = "1.0"
tokio-native-tls = "0.3"
tokio-opengauss = { version = "0.7.14", path = "../tokio-opengauss", default-features = false }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["macros", "net", "rt"] }
opengauss = { version = "0.19.8", path = "../opengauss" }
