[package]
name = "opengauss-protocol"
version = "0.6.11"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2024"
description = "Low level openGauss protocol APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/c2j/rust-opengauss"
readme = "../../README.md"
rust-version = "1.85"

[features]
default = []
js = ["getrandom/wasm_js"]

[dependencies]
base64 = "0.22"
byteorder = "1.0"
bytes = "1.11"
fallible-iterator = "0.2"
hmac = "0.13"
md-5 = "0.11"
hex = "0.4"
memchr = "2.0"
pbkdf2 = "0.12"
rand = "0.10"
sha1 = "0.10"
sha2 = "0.11"
stringprep = "0.1"
getrandom = { version = "0.4", optional = true }
