[package]
name = "opengauss"
version = "0.19.13"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A native, synchronous openGauss client"
repository = "https://github.com/c2j/rust-opengauss"
readme = "../../README.md"
keywords = ["database", "opengauss", "sql"]
categories = ["database"]
rust-version = "1.85"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[features]
array-impls = ["tokio-opengauss/array-impls"]
with-bit-vec-0_6 = ["tokio-opengauss/with-bit-vec-0_6"]
with-bit-vec-0_7 = ["tokio-opengauss/with-bit-vec-0_7"]
with-bit-vec-0_8 = ["tokio-opengauss/with-bit-vec-0_8"]
with-bit-vec-0_9 = ["tokio-opengauss/with-bit-vec-0_9"]
with-chrono-0_4 = ["tokio-opengauss/with-chrono-0_4"]
with-cidr-0_2 = ["tokio-opengauss/with-cidr-0_2"]
with-cidr-0_3 = ["tokio-opengauss/with-cidr-0_3"]
with-eui48-0_4 = ["tokio-opengauss/with-eui48-0_4"]
with-eui48-1 = ["tokio-opengauss/with-eui48-1"]
with-geo-types-0_6 = ["tokio-opengauss/with-geo-types-0_6"]
with-geo-types-0_7 = ["tokio-opengauss/with-geo-types-0_7"]
with-jiff-0_1 = ["tokio-opengauss/with-jiff-0_1"]
with-jiff-0_2 = ["tokio-opengauss/with-jiff-0_2"]
with-serde_json-1 = ["tokio-opengauss/with-serde_json-1"]
with-smol_str-01 = ["tokio-opengauss/with-smol_str-01"]
with-uuid-0_8 = ["tokio-opengauss/with-uuid-0_8"]
with-uuid-1 = ["tokio-opengauss/with-uuid-1"]
with-time-0_2 = ["tokio-opengauss/with-time-0_2"]
with-time-0_3 = ["tokio-opengauss/with-time-0_3"]

[dependencies]
bytes = "1.11"
fallible-iterator = "0.2"
futures-util = { version = "0.3.14", default-features = false, features = [
  "sink",
] }
log = "0.4"
tokio-opengauss = { version = "0.7.17", path = "../tokio-opengauss" }
tokio = { version = "1.0", features = ["rt", "time"] }

[dev-dependencies]
criterion = "0.7"
