[package]
name = "gaussdb-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An MCP server for openGauss database introspection"
rust-version = "1.85"

[[bin]]
name = "gaussdb-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
tokio-opengauss = { version = "0.7.17", path = "../../crates/tokio-opengauss" }
opengauss-native-tls = { version = "0.5.3", path = "../../crates/opengauss-native-tls" }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
toml = "0.8"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
